--- a/MooBoo.ToggleWrapper/MooBoo.ToggleWrapper.csproj
+++ b/MooBoo.ToggleWrapper/MooBoo.ToggleWrapper.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogFragmentation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseAPI.cs" />
     <Compile Include="Services\LogService.cs" />
