shit all get 2gth3r

--- a/MooBoo.Model/MooBoo.Model.csproj
+++ b/MooBoo.Model/MooBoo.Model.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataLayer\Category.cs" />
+    <Compile Include="DataLayer\DataObject.cs" />
     <Compile Include="DataLayer\LogItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
