--- a/MooBoo.DataAcessLayer/MooBoo.DataAcessLayer.csproj
+++ b/MooBoo.DataAcessLayer/MooBoo.DataAcessLayer.csproj
@@ -43,11 +43,7 @@
     <Compile Include="CategoryProvider.cs" />
     <Compile Include="DataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLite.cs" />
-    <Compile Include="SQLiteAsync.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="DataBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MooBoo.Infrastructure\MooBoo.Infrastructure.csproj">
@@ -57,6 +53,10 @@
     <ProjectReference Include="..\MooBoo.Model\MooBoo.Model.csproj">
       <Project>{449C3C76-8520-4973-9384-3DCAE8E1328E}</Project>
       <Name>MooBoo.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mooboo.Utilities\Mooboo.Utilities.csproj">
+      <Project>{A17EAA85-B11F-45F1-8F32-E7D75F01A054}</Project>
+      <Name>Mooboo.Utilities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
