SQLITE DB creation scripts

--- a/MooBoo.DataAcessLayer/MooBoo.DataAcessLayer.csproj
+++ b/MooBoo.DataAcessLayer/MooBoo.DataAcessLayer.csproj
@@ -63,7 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqliteDataProvider\SqliteBaseProvider.cs" />
+    <Compile Include="SqliteDataProvider\SqliteDataBaseProvider.cs" />
     <Compile Include="SqliteDataProvider\SqliteCategoryProvider.cs" />
     <Compile Include="SqliteDataProvider\SqliteDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
