--- a/MooBoo.Model/MooBoo.Model.csproj
+++ b/MooBoo.Model/MooBoo.Model.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DataLayer\Category.cs" />
     <Compile Include="DataLayer\LogItem.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
