--- a/MooBoo.Model/MooBoo.Model.csproj
+++ b/MooBoo.Model/MooBoo.Model.csproj
@@ -40,9 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataLayer\Application.cs" />
     <Compile Include="DataLayer\Category.cs" />
     <Compile Include="DataLayer\LogItem.cs" />
-    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
